Solve S360 contrast accessibility bugs

--- a/desktop/src/app/components/pool/graphs/performance-graph/enable-app-insights-doc/enable-app-insights-doc.scss
+++ b/desktop/src/app/components/pool/graphs/performance-graph/enable-app-insights-doc/enable-app-insights-doc.scss
@@ -5,7 +5,7 @@ bl-enable-app-insights-doc {
     padding: 10px;
 
     bl-clickable {
-        color: $button-basic-text-color;
+        color: $primary-color;
     }
 
     .warning {
