--- a/desktop/src/app/components/job/details/job-details.scss
+++ b/desktop/src/app/components/job/details/job-details.scss
@@ -27,3 +27,7 @@ bl-job-details {
         }
     }
 }
+
+bl-summary-card > .main-tile > .content-container > .content > .details {
+    color: $primary-text !important;
+}
